--- a/szamitogephalozatok/WebApplication1/wwwroot/htmlpage.html
+++ b/szamitogephalozatok/WebApplication1/wwwroot/htmlpage.html
@@ -1,19 +1,19 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <script src="/JavaScript.js"></script>
-
-    <title></title>
+    <script src="Jsgyak.js"></script>
 </head>
-<body>
-    <button onclick="myFunction()">Click me</button>
-    <button onclick="myFunction2()">Click me</button>
+<body onload="letöltés()">
 
-    <p id="demo"></p>
-
+    <div id="eredmeny"></div>
+    <button onclick="vissza()"></button>
+    <button onclick="tovább()"></button>
+    <ol id="ide"></ol>
+    <div id="kérdés"></div>
+    <button id="válasz1" onclick="válasz1()">válasz1</button>
+    <button id="válasz2" onclick="válasz2()">válasz2</button>
+    <button id="válasz3" onclick="válasz3()">válasz3</button>
 
 
 </body>
 </html>
-
