--- a/szamitogephalozatok/WebApplication1/wwwroot/hajos.html
+++ b/szamitogephalozatok/WebApplication1/wwwroot/hajos.html
@@ -10,22 +10,22 @@
 
 <body>
     <div id="kulso">
-        <div id="kerdes_szovege">
+        <div id="kérdés">
             
         </div>
         <div id="kozep">
             <div id="valaszok">
-                <button id="1" onclick="helyese()" class="kerdes kattinthato">válasz1</button>
-                <button id="2" onclick="helyese()" class="kerdes kattinthato">válasz2</button>
-                <button id="3" onclick="helyese()" class="kerdes kattinthato">válasz3</button>
+                <button id="válasz1" onclick="válasz1()" class="kerdes kattinthato">válasz1</button>
+                <button id="válasz2" onclick="válasz2()" class="kerdes kattinthato">válasz2</button>
+                <button id="válasz3" onclick="válasz3()" class="kerdes kattinthato">válasz3</button>
             </div>
             <div id="kep">
                 <img id="kep1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
             </div>
         </div>
         <div id="vezerlo">
-            <button class ="gomb kattinthato1"onclick="myFunction()">vissza</button>
-            <button class = "gomb kattinthato2" onclick="myFunction2()">tovább</button>
+            <button class ="gomb kattinthato1"onclick="vissza()">vissza</button>
+            <button class = "gomb kattinthato2" onclick="tovább()">tovább</button>
 
         </div>
     </div>
