--- a/szamitogephalozatok/WebApplication1/wwwroot/js.html
+++ b/szamitogephalozatok/WebApplication1/wwwroot/js.html
@@ -1,28 +1,1 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-    <script src="js.js"></script>
-</head>
-<body>
-   
-    <input id="nTb" type="text"/>
-    <button id="goBtn" onclick="szamitas()">mehet</button>
-    <div id="eredmény"></div>
-    <div id="ide">.</div>
-
-
-    <script>
-        let hova = document.getElementById("ide");
-        for (var s = 0; s < 10; s++) {
-            let sor = document.createElement("div");
-            hova.appendChild(sor)
-            for (var o = 0;  o < 10; o++) {
-
-            }
-        }
-    </script>
-
-</body>
-</html>
+﻿<script src="tizenegyedik.js"></script>
